Added blogpost frontend page

--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,7 @@
     flex-direction: column;
     /* align-items: center; */
     justify-content: center;
+    z-index: 1;
 }
 
 .content-left p {
