--- a/css/utils.css
+++ b/css/utils.css
@@ -60,6 +60,10 @@
     width: 30vw;
     padding: 5px 5px;
     margin: 5px 0px;
+    font-size: 15px;
+    font-family: var(--font2);
+    border: 2px solid orange;
+    border-radius: 5px;
 }
 
 
